# win11_release_guard

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
docs/: architecture-insight.md  dashboard-and-pages.md  handover-prompt19.md  policy-signing.md  security-automation.md  source-learnings.md  source-modules.md
tests/: test_agents_contract.py  test_cache.py  test_ci_workflow.py  test_cli.py  test_dependency_freshness.py  test_edge_cases.py  test_evaluator.py  test_export_clean_archive.py  test_github_action_versions.py  test_import_contract.py  test_json_hardening.py  test_local_state.py  test_no_active_graph_auth_references.py  test_no_legacy_entrypoint.py  test_pages_landing.py  test_policy_generator.py  test_policy_source_cli.py  test_publish_policy_workflow.py  test_remote_policy.py  test_repository_automation.py  test_runtime_policy_sources.py  test_signing.py  test_signing_key_management.py  test_source_diagnostics_issue_metadata.py  test_source_failures.py  test_wiki_markdown_links.py
tools/: check_dependency_freshness.py  check_github_action_versions.py  ci_local_runner_smoke.py  export_clean_archive.py  generate_policy.py  generate_signing_key.py
wiki/: Architecture.md  FAQ.md  GitHub-Pages-Dashboard.md  Home.md  Policy-Feed-and-Trust-Model.md  Release-v0.3.3.md  Source-Diagnostics.md  Troubleshooting.md
win11_release_guard/: __main__.py  api.py  cache.py  config.py  evaluator.py  json_utils.py  local_state.py  models.py  policy_generator.py  policy_schema.py  remote_policy.py  signing.py  (+2 more)
(+13 files in other folders)
